# tryptamine

./: .gitignore  .gitmodules  Cargo.toml  Dioxus.toml  Dockerfile  README.md  add_header.py  build_docker_images.sh  docker-compose.dev.yaml  docker-compose.yaml  frpc.ini  frpc.toml  leetcode_solutions.py  main.rs  main.zig  package.json  pnpm-lock.yaml  tailwind.config.ts
.github/workflows/: ci.yml
archive/egui-rust/: Cargo.toml
backend-rust/: Cargo.toml  README.md  frpc.ini
backend-rust/drafts/: immune-response.md
backend-rust/exapunks/: battlebot.wasm  battlebot2.wasm
backend-rust/leetcode/: mediantwoarrays.py
backend-rust/src/: colors.rs  fractals.rs  main.rs  math.rs  website.rs
backend-rust/templates/: layout.html
backup-src/: tmp.md
backup-src/notes/: markusbooks.md
backup-src/src/: acidlib.jl  mth.jl  renders.jl
birds_plus/: Cargo.toml
birds_plus/src/: main.rs
blog/: Cargo.toml  Dioxus.toml  Dockerfile  package-lock.json  package.json  tailwind.config.js
blog-chart/: Chart.yaml
blog-chart/templates/: deployment.yaml
blog-content/: config.toml  rust_is_a_lethal_language.md  what-is-sheaf.md
blog-content/activism-microblogs/: is-violence-necessary.md
blog-content/content/: _index.md  a_better_world_requires_abandoning_theory.md  bleeding-out-mutual-aid.md  (+8 more)
blog-generator/: Cargo.toml
blog-generator/ilm/: main.html  main.typ
blog-generator/src/: main.rs
blog-generator/src/components/: base.rs
blog/assets/: tailwind.css
blog/assets/blog/: explanation_of_the_tides.md  intro-to-quantum-weirdness.md
blog/assets/blog/activism-microblogs/: skeleman-response-01.md
blog/assets/blog/drafts/: read-less-theory.md  webs-of-trust.md
blog/assets/blog/recipies/: chili_crisp.md  crisp-powder.md
blog/assets/blog/scrapbook/: big_o_and_black_holes.md
blog/src/: main.rs
blog/src/components/: navbar.rs
blog/src/views/: blog.rs  home.rs
drafts/: new-activists.md  new_activists.md
egui-rust/: Cargo.toml
frontend-nextjs/: Dockerfile  Dockerfile-dev  package-lock.json  package.json
frontend-web-dioxus/: Cargo.toml  Dioxus.toml  package-lock.json  package.json  tailwind.config.js
k3s-chart/: values.yaml
lang/: Cargo.toml  test.moss
leetcode/: Cargo.toml  twosum-nlogn.py
math/: graphs-math.md  prime_infinite.md
mathematics-rust/: Cargo.toml
mathematics-rust/prompts/: jpv_notes.md  tmp.md
mathematics-rust/src/: main.rs
mathematics-rust/src/categories/: algebra.rs  mod.rs
mathematics-rust/src/datastructures/: complex_spheres.rs  mod.rs
mathematics-rust/src/math/: colors.rs  fast_fourier_transform.rs  fractal_definitions.rs  fractal_logic.rs  fractals.rs  mod.rs  primes.rs
mathematics-rust/src/misc/: mod.rs
mathematics-rust/src/physics/: mod.rs
misc-rust/: Cargo.toml
prompts/: k8s-architecture.md  tmp.md
public/: tailwind.css
src/: backup-main.rs  canvas.rs  colors.rs  fractals.rs  generate_blogs.rs  main.rs  math.rs  math.zig  website.rs
templates/: app.html  layout.html  post.html  test.html
tryptamine-core/: Cargo.toml
tryptamine-game/: Cargo.toml  flake.nix  rust-analyzer.toml
tryptamine-game/assets/shaders/: fractal.wgsl
tryptamine-game/src/: colors.rs  fractal.rs  main.rs
tryptamine-tui/: Cargo.toml  LICENSE  README.md
(+148 files in other folders)
