[package]
name = "tryptamine"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = "0.7.7"
comrak = "0.28.0"
tokio =  { version = "1.4.0", features = ["full"] }
tower = "0.5.1"
tower-http = {version = "0.6.1", features = ["fs"]}
walkdir = "2.5.0"
yaml-rust = "0.4.5"

[[bin]]
name = "tryptamine"
path = "src/main.rs"
