[package]
name = "actionable-neighborhoods"
version = "0.1.0"
authors = ["Nicole Venner <nvenner@protonmail.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.36.0"
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
include_dir = "0.7.4"
lazy_static = "1.5.0"
markdown = "1.0.0-alpha.23"
pulldown-cmark = "0.13.0"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
