[package]
name = "tryptamine-math"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
const_for = "0.1.5"
image = "0.25.5"
konst = "0.3.16"
num-bigint = "0.4.6"
num-complex = "0.4.6"
num-traits = "0.2.19"
palette = "0.7.6"
rand = "0.9.0"
rayon = "1.10.0"
smallvec = "1.15.0"
uom = "0.37.0"
