[package]
name = "tryptamine-game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", features = ["dynamic_linking"] }
rand_core = "0.10"
bevy_rand = "0.14"
bevy_prng = { version = "0.14", features = ["wyrand"] }
pallete = "1.1.0"



# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

